entorno visual listo

--- a/src/dfa/resources/DFAView.properties
+++ b/src/dfa/resources/DFAView.properties
@@ -1,9 +1,5 @@
-# Resources for the DFAView class
-
-# top-level menus
-
-fileMenu.text = File
-helpMenu.text = Help
+fileMenu.text = Archivo
+helpMenu.text = Ayuda
 
 # @Action resources
 
@@ -38,3 +34,5 @@ jTextField2.text=
 jButton1.text=Crear tabla
 jButton2.text=Cargar Datos
 jCheckBox1.text=jCheckBox1
+exitMenuItem.text=Salir
+aboutMenuItem.text=Acerca de..
